# zmk-dongle-screen

./: CMakeLists.txt  Kconfig
boards/shields/dongle_screen/: CMakeLists.txt  Kconfig.defconfig  dongle_screen.conf
boards/shields/dongle_screen/src/: battery_relay_central.c  battery_relay_central.h  battery_relay_peripheral.c  brightness.c  custom_status_screen.c  screen_rotate_init.c
boards/shields/dongle_screen/src/widgets/: battery_status.c  layer_status.c  mod_status.c  output_status.c  wpm_status.c
drivers/display/: display_st7789v.c
include/dongle_screen/: battery_relay.h
modules/lvgl/: lvgl.c
